# mcp-gateway-registry

./: .dockerignore  .env.docker.template  .env.example  .env.template  .gitignore  CLAUDE.md  DEV_INSTRUCTIONS.md  Dockerfile  GITHUB_ISSUE_CONTENT.md  LOGGING_FORMAT_STANDARDIZATION_ISSUE.md  MKDOCS_SETUP.md  Makefile  NOTICE  README.md  README_REACT_SETUP.md  README_alt.md  README_backup.md  build_and_run.sh  docker-compose.prebuilt.yml  docker-compose.yml  mcp_client.py  mcp_cmds.sh  mcp_demo.sh  metrics.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  server_api_restrictions.csv  start_all_servers.sh  start_token_refresher.sh  test-keycloak-mcp.sh  test_auth_debug_mcp.py
.github/workflows/: docs.yml  test.yml
agents/: .env.template  agent.py  agent_w_auth.py  cli_auth.py  cli_user_auth.py  client.py  httpx_patch.py  server_config.yml  strands_agent.py  system_prompt.txt  test_suite.py
agents/oauth/: egress_oauth.py  generic_oauth_flow.py  ingress_oauth.py  oauth_creds.sh  oauth_providers.yaml
agents/parking_lot/: README.md  strands_agent.py  test_suite.py
auth_server/: .env.template  cli_auth.py  cognito_utils.py  metrics_middleware.py  oauth2_providers.yml  pyproject.toml  scopes.yml  server.py
auth_server/providers/: __init__.py  base.py  cognito.py  factory.py  keycloak.py
cli/: anthropic_transformer.py  import_from_anthropic_registry.sh  import_server_list.txt  mcp_client.py  mcp_security_scanner.py  mcp_utils.py  package-lock.json  package.json  scan_all_servers.py  service_mgmt.sh  test_anthropic_api.py  test_mcp_gateway.sh  tsconfig.json  user_mgmt.sh
cli/examples/: cloudflare-docs-server-config.json  invalid-config.json  minimal-server-config.json  server-config.json
cli/src/: app.tsx  auth.ts  index.tsx  parseArgs.ts  paths.ts
config/: prometheus.yml
credentials-provider/: add_noauth_services.py  check_and_refresh_creds.sh  generate_creds.sh  token_refresher.py  utils.py
credentials-provider/agentcore-auth/: .env.example  README.md  config.yaml  config.yaml.example  generate_access_token.py
credentials-provider/keycloak/: generate_tokens.py
credentials-provider/oauth/: .env.example  egress_oauth.py  generic_oauth_flow.py  ingress_oauth.py  oauth_providers.yaml
docker/: Dockerfile.auth  Dockerfile.mcp-server  Dockerfile.registry  entrypoint.sh  nginx_rev_proxy.conf  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf  registry-entrypoint.sh
docs/: FAQ.md  FEATURES.md  OBSERVABILITY.md  README.md  TESTING.md  agentcore.md  ai-coding-assistants-setup.md  anthropic-registry-import.md  anthropic_registry_api.md  architectural-decision-reverse-proxy-vs-application-layer-gateway.md  auth.md  cli.md  cognito.md  complete-setup-guide.md  configuration.md  dynamic-tool-discovery.md  index.md  installation.md  jwt-token-vending.md  keycloak-integration.md  llms.txt  macos-setup-guide.md  mcp-registry-cli.md  metrics-architecture.md  prebuilt-images.md  quick-start.md  registry-auth-architecture.md  registry-auth-detailed.md  registry_api.md  remote-desktop-setup.md  scan_report_example.md  scopes.md  security-scanner.md  service-management.md  testing.md  token-refresh-service.md
docs/archived/: auth-backup.md
docs/design/: anthropic-api-implementation.md  anthropic-api-test-commands.md  anthropic-api-v0-test-commands.md  anthropic-v0-api-implementation.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  react-app-env.d.ts
keycloak/: README.md
keycloak/import/: realm-config.json
keycloak/setup/: clean-keycloak.sh  generate-agent-token.sh  get-all-client-credentials.sh  init-keycloak.sh  setup-agent-service-account.sh  setup-m2m-service-account.sh
metrics-service/: .env.example  Dockerfile  add_test_key.py  create_api_key.py  metrics_client.py  migrate.py  pyproject.toml  pytest.ini
metrics-service/app/: config.py  main.py
metrics-service/app/api/: auth.py  routes.py
metrics-service/app/core/: models.py  processor.py  rate_limiter.py  retention.py  validator.py
metrics-service/app/otel/: exporters.py  instruments.py
metrics-service/app/storage/: database.py  migrations.py
metrics-service/app/utils/: helpers.py
metrics-service/docs/: README.md  api-reference.md  data-retention.md  database-schema.md  deployment.md
metrics-service/tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_migrations.py  test_processor.py  test_rate_limiter.py  test_retention.py  test_validator.py
metrics-service/tmp/: metrics.db  test.db
registry/: .env.template  constants.py  main.py  nginx_rev_proxy.conf  nginx_template.conf
registry/api/: registry_routes.py  server_routes.py  v0_routes.py  wellknown_routes.py
registry/auth/: dependencies.py  routes.py
registry/core/: config.py  config.py.backup  mcp_client.py  nginx_service.py  schemas.py
registry/health/: routes.py  service.py
registry/metrics/: __init__.py  client.py  middleware.py  utils.py
registry/schemas/: __init__.py  anthropic_schema.py
registry/search/: service.py
registry/servers/: atlassian.json  currenttime.json  fininfo.json  mcpgw.json  realserverfaketools.json  server_state.json  sre-gateway.json
registry/services/: server_service.py  transform_service.py
registry/static/: style.css
registry/templates/: index.html  (+3 more)
release-notes/: v1.0.3.md  v1.0.4.md  v1.0.5.md
scripts/: README.md  docs-dev.sh  publish_containers.sh  refresh_m2m_token.sh  run-oauth-setup.sh  setup-atlassian-env.sh
servers/fininfo/: .env.template  .keys.yml.template  README.md  README_SECRETS.md  client.py  encrypt_secrets.py  pyproject.toml  secrets_manager.py  server.py
servers/mcpgw/: .env.template  README.md  client.py  pyproject.toml  server.py
servers/realserverfaketools/: README.md  client.py  pyproject.toml  server.py
terraform/: CHANGES_SUMMARY.md  DEPLOYMENT_GUIDE.md  FIX_SUMMARY.md  INTEGRATION_SUMMARY.md  ISSUES_RESOLVED.md
tests/: README.md  TEST_QUICK_REFERENCE.md  conftest.py  mcp_cmds.sh  run_all_tests.sh
(+96 files in other folders)
