[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth_server"]

[project]
name = "auth_server"
version = "0.1.0"
description = "Authentication server for validating JWT tokens against Amazon Cognito"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "python-jose>=3.3.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.28.0",
    "pyjwt>=2.6.0",
    "cryptography>=40.0.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]