[project]
name = "fininfo-mcp-server"
version = "0.1.0"
description = "MCP server to provide financial information using Polygon.io API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
   "fastmcp>=2.0.0",  # Updated to FastMCP 2.0
   "pydantic>=2.11.3",
   "requests>=2.32.3",
   "python-dotenv>=1.0.0",  # Added dotenv as it's used in server.py
   "PyYAML>=6.0.0",  # For YAML secrets file parsing
   "cryptography>=41.0.0",  # For potential encryption support
]
