[project]
name = "mcpgw-mcp-server" # Updated name
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API" # Updated description
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
   "mcp>=1.9.3",
   "pydantic>=2.11.3",
   "httpx>=0.27.0", # Added httpx
   "python-dotenv>=1.0.0", # Added dotenv as it's used in server.py
   "websockets>=15.0.1",
   "faiss-cpu>=1.7.4",
   "sentence-transformers>=2.2.2", # For semantic search
   "scikit-learn>=1.3.0"          # For cosine similarity
]
