[project]
name = "real-server-fake-tools-mcp"
version = "0.1.0"
description = "MCP server with fake tools that take different parameter types"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
   "fastmcp>=2.0.0", # Updated to FastMCP 2.0
   "pydantic>=2.11.3",
   "httpx>=0.27.0", # Added httpx for HTTP requests
   "python-dotenv>=1.0.0", # Added dotenv for environment variable loading
]